--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -2,6 +2,7 @@
 @layout.page({ 
   title: page.title, 
   description: page?.description,
+  meta_fields: page?.meta_fields
 })
 @slot('header')
   @layout.header()
