--- a/project/public/components/basic/eta-test.html
+++ b/project/public/components/basic/eta-test.html
@@ -1,7 +1,7 @@
 <template id="eta-test" adv>
     <adv-view ref="test"
         onload="{
-            el.render({
+            $self.render({
                 name: 'world',
                 someArray:[
                     {name: 'pikachu', type: 'electric'},
