--- a/project/public/components/basic/simple-counter.html
+++ b/project/public/components/basic/simple-counter.html
@@ -1,8 +1,13 @@
 <template id="simple-counter" adv>
     <div class="flex justify-center items-center gap-4">
         <button ref="subtract" onclick="refs.counter.data.count--"> - </button>
-        <adv-view ref="counter" onload="el.data.count = 0"> 
+        <adv-view ref="counter" onload="$self.data.count = 0"> 
             {{= it.count }}
+            <if check="it.count < 10">
+                low
+                <else />
+                high
+            </if>
         </adv-view>
         <button ref="add" onclick="refs.counter.data.count++"> + </button>
     </div>
