--- a/project/public/components/basic/eta-test.html
+++ b/project/public/components/basic/eta-test.html
@@ -24,9 +24,9 @@
             });
         }"
     >
-        <h1>Hello new Trainer {{= it.name }} </h1>
+        <h1>Hello new Trainer {{= name }} </h1>
         <ul class="list-disc">
-            <for data="it.someArray" name="val" index="index">
+            <for data="someArray" name="val" index="index">
                 <li>
                     The current array item is {{=val.name}}, the current index is {{=index}}
                 </li>
@@ -34,7 +34,7 @@
             <h2>Badges</h2>
             <h3>
             </h3>
-            <of data="it.someMap.badges" name="badge_name" value="badge">
+            <of data="someMap.badges" name="badge_name" value="badge">
                 <li>
                     <span>{{= badge_name }}</span> badge from {{=badge.gym}} gym is of type {{=badge.type}} and is {{= badge.aquired ? 'aquired' : 'not aquired'}}
                 </li>
