need to handle comonents returning 200 on request but response dones have component

--- a/project/public/components/kit/like-button.html
+++ b/project/public/components/kit/like-button.html
@@ -1,4 +1,4 @@
-<template id="like-button">
+<template id="like-button" adv>
   <script>
     const { container } = refs;
     const buttons = Array.from(container.children);
