--- a/advect.org/src/views/components/layout/page.edge
+++ b/advect.org/src/views/components/layout/page.edge
@@ -5,17 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="prefetch" href="/assets/advect.js" />
+  <link rel="prefetch" href="/assets/main.css" />
+  <link rel="stylesheet" href="/assets/main.css" />
 
   @if ($slots.head_assets)
   {{{ await $slots.head_assets() }}}
   @end
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@advect/advect@0.1.5/dist/advect.css" />
-  <script src="https://unpkg.com/htmx.org@2.0.2/dist/htmx.js"
-    integrity="sha384-yZq+5izaUBKcRgFbxgkRYwpHhHHCpp5nseXp0MEQ1A4MTWVMnqkmcuFez8x5qfxr"
-    crossorigin="anonymous"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css" />
-    <link rel="stylesheet" href="/assets/main.css" />
     
     @each(meta in meta_fields)
       <meta name="{{meta.name}}" content="{{meta.content}}">
@@ -35,18 +31,20 @@
     @if ($slots.content)
     {{{ await $slots.content() }}}
     @end
+    <footer>
+      @if ($slots.footer)
+      {{{ await $slots.footer() }}}
+      @end
+      @if ($slots.footer_assets)
+      {{{ await $slots.footer_assets() }}}
+      @end
+      <script type="module" async src="/assets/advect.js"></script>
+      <script type="module" src="/assets/advect.org.js"></script>
+  
+    </footer>
   </main>
 
-  <footer>
-    @if ($slots.footer)
-    {{{ await $slots.footer() }}}
-    @end
-    @if ($slots.footer_assets)
-    {{{ await $slots.footer_assets() }}}
-    @end
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@advect/advect@0.1.5/dist/advect.js"></script>
 
-  </footer>
   </div>
 </body>
 
