--- a/project/public/components/app/todo-component.html
+++ b/project/public/components/app/todo-component.html
@@ -1,27 +1,24 @@
 <template id="todo-component" adv>
   <script>
-    /**
-     * A number, or a string containing a number.
-     * @typedef {Record<string, HTMLElement>} Refs
-     */
+    const channel_id = `todo-component-${Math.random() * 20000}`;
+    const channel = new BroadcastChannel(channel_id);
 
-    /** @type {Refs} */ const { todos_view } = refs;
-    const { getState, setState, subscribe } = $self.createStore((set, get) => ({
+    const { todos_view } = refs;
+    const { getState, subscribe } = $self.createStore((set, get) => ({
+      channel_id,
       name: "Todo List",
       todos: [],
-      initiated: false,
       init: (data) => set({ todos: data, initiated: true }),
       getTags: () => get().todos.map((todo) => todo.tag),
       addTodo: (todo) => set({ todos: [...get().todos, todo] }),
-      removeTodo: (id) =>
-        set({ todos: get().todos.filter((todo) => todo.id !== id) }),
-      updateTitle: (id, title) =>
+      removeTodo: ({ id }) => set({ todos: get().todos.filter((todo) => todo.id !== id) }),
+      updateTitle: ({ id, title }) =>
         set({
           todos: get().todos.map((todo) =>
             todo.id === id ? { ...todo, title } : todo
           ),
         }),
-      updateComplete: (id, complete) =>
+      updateComplete: ({ id, complete }) =>
         set({
           todos: get().todos.map((todo) =>
             todo.id === id
@@ -55,28 +52,34 @@
       { id: "1", title: "Todo 1", complete: true, tag: "fun" },
       { id: "2", title: "Todo 2", complete: false, tag: "work" },
       { id: "3", title: "Todo 3", complete: false, tag: "adulting" },
-      { id: "4", title: "Todo 4", complete: false, tag: "shopping" },
-      { id: "5", title: "Todo 5", complete: true, tag: "work" },
-      { id: "6", title: "Todo 6", complete: false, tag: "fun" },
-      { id: "7", title: "Todo 7", complete: true, tag: "adulting" },
-      { id: "8", title: "Todo 8", complete: false, tag: "work" },
-      { id: "9", title: "Todo 9", complete: false, tag: "fun" },
-      { id: "10", title: "Todo 10", complete: true, tag: "shopping" },
-      { id: "11", title: "Todo 11", complete: false, tag: "work" },
-      { id: "12", title: "Todo 12", complete: true, tag: "fun" },
-      { id: "13", title: "Todo 13", complete: false, tag: "adulting" },
     ]);
+
+    channel.onmessage = function (ev) {
+      new Promise(() => scope[ev.data?.action](ev.data?.payload))
+        .catch((error) => {
+          console.warn(error);
+        })
+        .then((data) => {
+          //console.log( data )
+        });
+    };
+
     return scope;
   </script>
   <h2>Todo List</h2>
-  <button on ref="add_todo_button" onclick="refs.new_todo_diag.showModal()">
+  <button ref="add_todo_button" onclick="refs.new_todo_diag.showModal()">
     Add Todo
   </button>
-  <dialog ref="new_todo_diag">
-    <label for="new_todo_title">Title</label>
-    <input ref="new_todo_title" type="text" name="new_todo_title" />
-    <label for="new_todo_complete">Complete</label>
-    <input ref="new_todo_complete" type="checkbox" name="new_todo_complete" />
+  <dialog ref="new_todo_diag" class="max-w-[300px]">
+    <h2 class="text-lg">Add Todo</h2>
+    <label for="new_todo_title">
+      Todo Title
+      <input ref="new_todo_title" type="text" name="new_todo_title" />
+    </label>
+    <label for="new_todo_complete">
+      Complete
+      <input ref="new_todo_complete" type="checkbox" name="new_todo_complete" />
+    </label>
     <button
       ref="add_todo"
       onclick="
@@ -96,9 +99,7 @@
     <for data="todos" name="todo" index="todo_index">
       <todo-item
         ref
-        onload="{
-        
-        }"
+        data-channel="{{=channel_id}}"
         todo-id="{{=todo.id}}"
         todo-title="{{=todo.title}}"
         todo-complete="{{=todo.complete}}"
@@ -114,10 +115,33 @@
 
 <template id="todo-item" todo-id todo-title todo-complete adv>
   <script>
-    $self.updateTitle = (title, id) => {};
-    $self.updateComplete = (complete, id) => {};
-    $self.removeTodo = (id) => {
-      console.log('removing ',id)
+    $self.style.transition = "opacity 0.2s";
+    const channel = new BroadcastChannel(data.channel);
+    $self.onDisconnect = () => {
+      channel.close();
+    };
+    return {
+      updateTitle: ({ title, id }) => {
+        channel.postMessage({
+          action: "updateTitle",
+          payload: { title, id },
+        });
+      },
+      updateComplete: ({ complete, id }) => {
+        channel.postMessage({
+          action: "updateComplete",
+          payload: { complete, id },
+        });
+      },
+      removeTodo: ({ id }) => {
+        $self.classList.add("opacity-0");
+        $self.ontransitionend = () => {
+          channel.postMessage({
+            action: "removeTodo",
+            payload: { id },
+          });
+        };
+      },
     };
   </script>
 
@@ -129,8 +153,14 @@
         name=""
         type="text"
         onload="{
-        $this.value = $self.attr['todo-title']
-      }"
+          $this.value = $self.attr['todo-title']
+        }"
+        oninput="{
+          scope.updateTitle({
+            id: $self.attr['todo-id'],
+            title: $this.value
+        });
+        }"
       />
     </label>
     <label>
@@ -142,8 +172,16 @@
         onload="{
           $this.checked = $self.attr['todo-complete'] == 'true'
         }"
+        oninput="{
+        scope.updateComplete({
+          id: $self.attr['todo-id'],
+          complete: $this.checked
+      });
+      }"
       />
     </label>
-    <button ref onclick="$self.removeTodo($self.attr['todo-id'])">Delete</button>
+    <button ref onclick="scope.removeTodo({id:$self.attr['todo-id']})">
+      Delete
+    </button>
   </div>
 </template>
