--- a/advect.org/assets/advect.css
+++ b/advect.org/assets/advect.css
@@ -1,12 +1,10 @@
 :not(:defined) {
   opacity: 0;
-  min-height:100%;
 }
 :defined {
   transition: opacity 0.2s ease-in-out;
   opacity: 1;
 }
-
 @media (prefers-reduced-motion: reduce) {
   :defined {
     transition: none;
@@ -23,67 +21,57 @@
   --secondary: #010020;
   --tertiary: #ddd;
   --container-width: 920px;
-
 }
-
 html,
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 1rem;
   line-height: 1.5;
   padding: 0;
   margin: 0;
-
 }
 body {
   max-width: 1920px;
   margin-inline: auto;
-  }
-
+}
 h1,
 h2,
 h3 {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 900;
   line-height: 1.2;
   margin: 0;
 }
 ul {
   list-style: disc;
-  & li {
-    margin-left: 1rem;
-  }
+}
+ul li {
+  margin-left: 1rem;
 }
 a {
   text-decoration: none;
   transition: text-decoration 0.2s ease-in-out;
-  &:hover {
-    text-decoration: underline;
-    
-  }
-
 }
-
-
-.container{
+a:hover {
+  text-decoration: underline;
+}
+.container {
   margin-inline: auto;
-  max-width:var(--container-width, 1200px);
-
+  max-width: var(--container-width, 1200px);
 }
-
 section {
   padding-inline: 1rem;
-  &:not(:first-of-type) {
-    margin-top: 1rem;
-  }
-  &:not(:last-of-type) {
-    &::after {
-      content: "";
-      display: block;
-      height: 1px;
-      background-color: var(--tertiary);
-      margin-top: 1rem;
-    }
-    margin-bottom: 1rem;
-  }
+}
+section:not(:first-of-type) {
+  margin-top: 1rem;
+}
+section:not(:last-of-type) {
+  margin-bottom: 1rem;
+}
+section:not(:last-of-type):after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: var(--tertiary);
+  margin-top: 1rem;
 }
