--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -1,59 +1,63 @@
 @assign(page = await app.queryItem("Pages", { slug: "/" }))
-@layout.page({ 
-  title: page.title, 
-  description: page?.description,
-  meta_fields: page?.meta_fields
+@layout.page({
+title: page.title,
+description: page?.description,
+meta_fields: page?.meta_fields
 })
 @slot('header')
-  @layout.header()
-  @end
+@layout.header()
+@end
 @end
 
 @slot('content')
 <script type="application/json">
   {{{ JSON.stringify(page) }}}
 </script>
-<section class="bg-gray-50 text-black hero">
-  <div class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center">
-    <div class="mx-auto max-w-xl text-center">
-      <h1 class="text-3xl font-extrabold sm:text-5xl">
-        Advect
-        <strong class="font-extrabold text-red-700 sm:block">
-          Web Components
-        </strong>
-      </h1>
+<script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
+<script type="text/adv" src="/assets/components/adv-org-card.html"></script>
+<section class="cover ">
+  <adv-org-hero>
+    <span slot="h1">
+      Advect
+      <strong class="font-extrabold text-red-700 sm:block">
+        Web Components
+      </strong>
+    </span>
+    <span slot="blurb">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+      illo tenetur fuga ducimus numquam ea!
 
-      <p class="mt-4 sm:text-xl/relaxed">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Nesciunt illo tenetur fuga ducimus numquam ea!
-      </p>
-
-      <div class="mt-8 flex flex-wrap justify-center gap-4">
-        <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
-          href="#">
-          Get Started
-        </a>
-
-        <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto"
-          href="#">
-          Learn More
-        </a>
-      </div>
+    </span>
+    <div slot="content">
+      <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
+        href="#">
+        Get Started
+      </a>
+      <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto"
+        href="#">
+        Learn More
+      </a>
     </div>
-  </div>
+  </adv-org-hero>
 </section>
-<section>
+
+
+<section class="min-h-[500px] grid xl:grid-cols-4 gap-10 py-2 my-2 max-w-4xl mx-auto min-h-[300px]">
+
+</section>
+
+<section class="max-w-4xl mx-auto">
   {{{`${page?.rich_content}`}}}
 </section>
 
-<section>
+<section class="max-w-4xl mx-auto">
   {{{`${edjs(page.blocks)}`}}}
 </section>
 @end
 
-  @slot('footer')
-    @layout.footer()
-    @end
-  @end
+@slot('footer')
+@layout.footer()
+@end
+@end
 
 @end
