--- a/advect.org/src/views/components/layout/page.edge
+++ b/advect.org/src/views/components/layout/page.edge
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" hidden>
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -8,7 +7,14 @@
   <link rel="prefetch" href="/assets/advect.js" />
   <link rel="prefetch" href="/assets/main.css" />
   <link rel="stylesheet" href="/assets/main.css" />
-
+  <script type="text/adv" src="/assets/components/adv-auth.html"></script>
+<script>
+  window.adv_config = {
+    shim :{
+      useShim:false;
+    } 
+  }
+</script>
   @if ($slots.head_assets)
   {{{ await $slots.head_assets() }}}
   @end
@@ -43,9 +49,6 @@
   
     </footer>
   </main>
-
-
   </div>
 </body>
-
 </html>
