--- a/advect.org/src/views/pages/home.edge
+++ b/advect.org/src/views/pages/home.edge
@@ -1,63 +1,58 @@
 @assign(page = await app.queryItem("Pages", { slug: "/" }))
 @layout.page({
-title: page.title,
-description: page?.description,
-meta_fields: page?.meta_fields
+    title: page.title,
+    description: page?.description,
+    meta_fields: page?.meta_fields
 })
 @slot('header')
-@layout.header()
+  @layout.header()
+  @end
 @end
-@end
-
-@slot('content')
-<script type="application/json">
-  {{{ JSON.stringify(page) }}}
-</script>
-<script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
-<script type="text/adv" src="/assets/components/adv-org-card.html"></script>
-<section class="cover ">
-  <adv-org-hero>
-    <span slot="h1">
-      Advect
-      <strong class="font-extrabold text-red-700 sm:block">
-        Web Components
-      </strong>
-    </span>
-    <span slot="blurb">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
-      illo tenetur fuga ducimus numquam ea!
-
-    </span>
-    <div slot="content">
-      <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
-        href="#">
-        Get Started
-      </a>
-      <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto"
-        href="#">
-        Learn More
-      </a>
-    </div>
-  </adv-org-hero>
-</section>
+  @slot('content')
+  <script type="application/json">
+    {{{ JSON.stringify(page) }}}
+  </script>
+  <script type="text/adv" src="/assets/components/adv-org-hero.html"></script>
+  <script type="text/adv" src="/assets/components/adv-org-card.html"></script>
 
 
-<section class="min-h-[500px] grid xl:grid-cols-4 gap-10 py-2 my-2 max-w-4xl mx-auto min-h-[300px]">
+  <section class="hero-section">
+    <adv-org-hero>
+      <span slot="h1">
+        Advect
+        <strong class="font-extrabold text-red-700 sm:block">
+          Web Components
+        </strong>
+      </span>
+      <span slot="blurb">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+        illo tenetur fuga ducimus numquam ea!
 
-</section>
-
-<section class="max-w-4xl mx-auto">
-  {{{`${page?.rich_content}`}}}
-</section>
-
-<section class="max-w-4xl mx-auto">
-  {{{`${edjs(page.blocks)}`}}}
-</section>
-@end
-
-@slot('footer')
-@layout.footer()
-@end
-@end
-
+      </span>
+      <div slot="content">
+        <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
+          href="#">
+          Get Started
+        </a>
+        <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto"
+          href="#">
+          Learn More
+        </a>
+      </div>
+    </adv-org-hero>
+  </section>
+  <section>
+    <my-ting></my-ting>
+  </section>
+  <section class="max-w-4xl mx-auto">
+    {{{`${page?.rich_content}`}}}
+  </section>
+  <section class="max-w-4xl mx-auto">
+    {{{`${edjs(page.blocks)}`}}}
+  </section>
+  @end
+  @slot('footer')
+    @layout.footer()
+    @end
+  @end
 @end
